Fix out of place clipboard-copy icon

--- a/app/assets/stylesheets/article-show.scss
+++ b/app/assets/stylesheets/article-show.scss
@@ -1189,6 +1189,7 @@ article {
           box-shadow: $shadow;
           left: auto;
           bottom: 48px;
+          min-width: 312px;
           padding-bottom: 6px;
           padding-top: 6px;
         }
